--- a/EnterpirseCheckpoint.Utilities/EnterpirseCheckpoint.Utilities.csproj
+++ b/EnterpirseCheckpoint.Utilities/EnterpirseCheckpoint.Utilities.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extensioins\" />
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
