--- a/EnterpriseCheckpoint.Services/EnterpriseCheckpoint.Services.csproj
+++ b/EnterpriseCheckpoint.Services/EnterpriseCheckpoint.Services.csproj
@@ -10,4 +10,15 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EnterpirseCheckpoint.Utilities\EnterpirseCheckpoint.Utilities.csproj" />
+    <ProjectReference Include="..\Enterprise.Checkpoint.Interfaces\Enterprise.Checkpoint.Interfaces.csproj" />
+    <ProjectReference Include="..\EnterpriseCheckpoint.DataAccess\EnterpriseCheckpoint.DataAccess.csproj" />
+    <ProjectReference Include="..\EnterpriseCheckpoint.Models\EnterpriseCheckpoint.Models.csproj" />
+  </ItemGroup>
+
 </Project>
