--- a/Enterprise.Checkpoint.Interfaces/Enterprise.Checkpoint.Interfaces.csproj
+++ b/Enterprise.Checkpoint.Interfaces/Enterprise.Checkpoint.Interfaces.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EnterpriseCheckpoint.Models\EnterpriseCheckpoint.Models.csproj" />
+  </ItemGroup>
+
 </Project>
