--- a/EnterpriseCheckpoint.DataAccess/EnterpriseCheckpoint.DataAccess.csproj
+++ b/EnterpriseCheckpoint.DataAccess/EnterpriseCheckpoint.DataAccess.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Enterprise.Checkpoint.Interfaces\Enterprise.Checkpoint.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
