Admin schedule page

--- a/EnterpirseCheckpoint/EnterpirseCheckpoint.csproj
+++ b/EnterpirseCheckpoint/EnterpirseCheckpoint.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Autofac" Version="8.0.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.2" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="$(AvaloniaVersion)" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
@@ -39,6 +40,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModelParameters\" />
+    <UpToDateCheckInput Remove="Views\ScheduleView.axaml" />
   </ItemGroup>
 </Project>
